🔒 Remove internal development files from public repo
- Remove MVP.md and PLANNING.md from repository
- Add to .gitignore to keep them local only
- Keep development docs private while code remains open source

These files contain internal development notes and should not be public.

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,7 @@ app/schemas/
 # Secrets and API keys (aunque esta app no usa, buena práctica)
 secrets.properties
 api_keys.properties
+
+# Development internal files
+MVP.md
+PLANNING.md
