🚀 Phase 8: Play Store preparation - Release optimization
✅ Completed:
- 🔒 ProGuard rules optimized for maximum obfuscation
- ⚙️ Build.gradle configured for release with optimizations
- 📝 Complete Play Store description in Spanish
- 🛡️ Google Play permissions justification (SCHEDULE_EXACT_ALARM)
- 📋 Comprehensive assets checklist
- 🧪 Final testing plan with critical test cases
- 📊 Version management system documented
- 🔑 Keystore generation guide created

🎯 Release optimizations:
- Resource shrinking enabled
- ZIP alignment enabled
- Debug symbols removed
- Logging removed in release
- Bundle splits configured
- Packaging optimized

📱 App Status: 88% complete (15/17 days)
🔄 Next: Create graphic assets and final testing

#PlayStore #Release #Privacy #OpenSource

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,9 @@ api_keys.properties
 # Development internal files
 MVP.md
 PLANNING.md
+play-store-description.md
+google-play-permissions-justification.md
+generate-keystore.md
+play-store-assets-checklist.md
+version-management.md
+final-testing-plan.md
