--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,30 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             
-            // Configuración de firma (se agregará más tarde)
+            // Optimizaciones para release
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            zipAlignEnabled true
+            
+            // Configuración de firma (agregar cuando se genere keystore)
             // signingConfig signingConfigs.release
+            
+            // Configuraciones de build
+            buildConfigField "boolean", "DEBUG_MODE", "false"
+            buildConfigField "String", "BUILD_TYPE", '"release"'
         }
         debug {
             applicationIdSuffix ".debug"
             debuggable true
+            minifyEnabled false
+            
+            // Configuraciones de build para debug
+            buildConfigField "boolean", "DEBUG_MODE", "true"
+            buildConfigField "String", "BUILD_TYPE", '"debug"'
         }
     }
     
@@ -59,6 +75,33 @@ android {
     packagingOptions {
         pickFirst '**/libc++_shared.so'
         pickFirst '**/libjsc.so'
+        
+        // Excluir archivos innecesarios para reducir tamaño
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/*.kotlin_module'
+    }
+    
+    // Configuraciones adicionales para release
+    bundle {
+        language {
+            // Incluir solo idiomas necesarios (reducir tamaño)
+            enableSplit = true
+        }
+        density {
+            // Permitir splits por densidad
+            enableSplit = true
+        }
+        abi {
+            // Permitir splits por arquitectura
+            enableSplit = true
+        }
     }
 }
 
