--- a/.gitignore
+++ b/.gitignore
@@ -50,10 +50,10 @@ captures/
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
-# Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
+# Keystore files (CRÍTICO - NUNCA SUBIR)
 *.jks
 *.keystore
+keystore.properties
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -121,3 +121,9 @@ generate-keystore.md
 play-store-assets-checklist.md
 version-management.md
 final-testing-plan.md
+ASSETS.md
+setup-release.md
+keystore.properties.template
+
+# Play Store assets (final files)
+play-store-assets/
