🔧 Fix Gradle compatibility issues for APK generation
- Convert to legacy buildscript syntax for better compatibility
- Downgrade to Gradle 8.0 and Kotlin 1.8.10 (stable versions)
- Change plugins to apply plugin syntax
- Add fix-gradle-sync.md with troubleshooting steps
- Create build-legacy.gradle as backup

This should resolve the kotlin-kapt plugin issues in Android Studio.

--- a/app/build-legacy.gradle
+++ b/app/build-legacy.gradle
@@ -1,5 +1,6 @@
+// Legacy syntax for app build.gradle
 apply plugin: 'com.android.application'
-apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlinx-serialization'
@@ -56,7 +57,7 @@ android {
             zipAlignEnabled true
             
             // Configuración de firma
-            if (project.hasProperty('android.signingConfigs.release.keyAlias')) {
+            if (keystorePropertiesFile.exists()) {
                 signingConfig signingConfigs.release
             }
             
