--- a/build-legacy.gradle
+++ b/build-legacy.gradle
@@ -1,12 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Alternative build file with legacy plugin syntax for compatibility
 buildscript {
-    ext.kotlin_version = '1.8.10'
+    ext.kotlin_version = '1.9.0'
+    ext.agp_version = '8.1.2'
+    
     repositories {
         google()
         mavenCentral()
     }
+    
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
