feat: Mejoras visuales profesionales y Discord
- Actualizada paleta de colores a marca oficial (azul #1976D2, verde #4CAF50)
- Iconos distintivos para suscripciones (azul) y garantías (naranja)
- Dashboard mejorado con logo, cards con colores de marca
- Pantalla About rediseñada con logo prominente y badge de privacidad
- Agregado enlace a Discord: https://discord.gg/xKUjn3EJzR
- Icono de app actualizado con escudo y reloj (protección + vencimiento)
- Items de suscripción y garantía con estilos diferenciados
- Eliminados logs de debug para producción
- Navegación mejorada entre Dashboard y Búsqueda
- Funcionalidad 'Ver todas' corregida

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,18 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+        <!-- Deshabilitar inicialización automática de WorkManager -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data
+                android:name="androidx.work.WorkManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+        </provider>
+
         <!-- Receptor para reinicio del sistema -->
         <receiver
             android:name=".notifications.BootReceiver"
